[project]
name = "rivergen"
version = "1.2.3"
description = "Procedural Road/River Segment Generator for NN Training"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Niklas Paulig", email = "niklas.paulig@tu-dresden.de" }
]
keywords = ["procedural generation", "road", "river", "NN training"]
urls = { Homepage = "https://github.com/nikpau/segGen" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.19",
  "attrs>=22.0.0",
  "matplotlib>=3.5.3",
  "pyyaml"
]

[project.scripts]
rivergen = "rivergen.__main__:main"

[build-system]
requires = [
  "setuptools>=61.0",  # Ensure you're using a recent setuptools that supports PEP 621
  "wheel"
]
build-backend = "setuptools.build_meta"
