[metadata]
name = rivergen
version = 1.0.0
author = Niklas Paulig
author_email = niklas.paulig@tu-dresden.de
description = Procedual Road/River Segment Generator for NN Training 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikpau/segGen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where=src