[metadata]
name = rivergen
version = 1.1.0
author = Niklas Paulig
author_email = niklas.paulig@tu-dresden.de
description = Procedual Road/River Segment Generator for NN Training 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikpau/segGen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[project]
install_requires =
    collections,
    numpy >= 1.19,
    random,
    dataclasses,
    matplotlib >= 3.5.3,
    os,
    pyyaml,

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where=src