[metadata]
name = rivergen
version = 1.2.1
author = Niklas Paulig
author_email = niklas.paulig@tu-dresden.de
description = Procedual Road/River Segment Generator for NN Training 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikpau/segGen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[project]
install_requires =
    collections,
    numpy >= 1.19,
    random,
    dataclasses,
    matplotlib >= 3.5.3,
    os,
    pyyaml,

[options]
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts =
    rivergen = rivergen.__main__:main

[options.packages.find]
where=src